optimize code and doc.